# Aevum-Bond

./: .gitignore  AI_AGENTS_COPILOT_CONFIG.md  API_REFERENCE.md  ARCHITECTURE.md  AUTOMATED_PROTECTION_SETUP.md  BRANCH_PROTECTION_GUIDE.md  CODEOWNERS  CONTINUATION_GUIDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  Dockerfile  EXECUTIVE_SUMMARY.md  FILE_COMPLETENESS_REPORT.md  FINAL_DEPLOYMENT_REPORT.md  FINAL_TESTING_FRAMEWORK_REPORT.md  FINAL_TESTING_REPORT_5_LAYERS.md  GITHUB_AGENTS_CONFIG.md  GITHUB_REPOSITORY_SETUP.md  LICENSE  MANUAL_PROTECTION_GUIDE.md  MIGRATION_GUIDE.md  MISSION_ACCOMPLISHED_REPORT.md  OPTIMIZATION_ANALYSIS_REPORT.md  PROJECT_SCAFFOLD_SPEC.md  QUICK_CONFIG_GUIDE.md  README.md  RIGOROUS_TESTING_COMPLETE_REPORT.md  RULESET_TARGET_CONFIG.md  SECURITY.md  SPRINT-1-COMPLETE.md  TESTING_REPORT_SPRINT1.md  TEST_OPTIMIZATION_STRATEGY.md  deny.toml  docker-compose.yml  setup_branch_protection.sh  setup_github_repo.sh  setup_protection_simple.sh  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_task.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
aevum-core/: Cargo.toml
aevum-core/src/: lib.rs
bond-core/: Cargo.toml
bond-core/src/: block.rs  consensus.rs  error.rs  lib.rs  mining.rs  script.rs  transaction.rs  utxo.rs
bond-core/tests/: advanced_security_tests.rs  bond_core_integration.rs  chaos_tests.rs  chaos_tests.rs.bak  e2e_tests.rs  integration_tests.rs  network_tests.rs  post_quantum_crypto_integration.rs  progressive_rigor_framework.rs  rigorous_unit_tests.rs  security_tests.rs  simple_progressive_strategy.rs  stress_tests.rs  stress_tests_optimized_level1.rs  stress_tests_optimized_level2.rs  stress_tests_optimized_level3.rs
cli-tools/: Cargo.toml
cli-tools/src/: bond_cli.rs  lib.rs
docs/: FINAL_IMPLEMENTATION_REPORT.md  FINAL_RESOLUTION_REPORT.md  PROBLEM_RESOLUTION_REPORT.md  PROGRESSIVE_RIGOR_IMPLEMENTATION.md  bond-cli-usage.md  code-analysis-report.md  sprint-1-report.md  sprint-2-report.md  testing-strategy-analysis.md
docs/testing/: e2e-tests-cli-integration.md  e2e-tests-summary.md  e2e-tests-user-journeys.md  e2e-tests-wallet-node-interaction.md  integration-tests-block-validation.md  integration-tests-bridge.md  integration-tests-governance.md  integration-tests-overview.md  integration-tests-p2p-network.md  integration-tests-staking-rewards.md  integration-tests-storage.md  integration-tests-summary.md  integration-tests-transaction-lifecycle.md  layer-5-summary.md  network-tests-chain-synchronization.md  network-tests-fork-resolution.md  network-tests-inter-ledger-bridge.md  network-tests-multi-node-scenarios.md  network-tests-summary.md  security-tests-attack-simulation.md  security-tests-dependency-auditing.md  security-tests-fuzzing.md  security-tests-monitoring.md  security-tests-penetration.md  unit-tests-consensus.md  unit-tests-crypto.md  unit-tests-data-structures.md  unit-tests-hashing.md  unit-tests-mempool.md  unit-tests-script-vm.md  unit-tests-summary.md  unit-tests-transactions.md
p2p-network/: Cargo.toml
p2p-network/src/: lib.rs
shared-crypto/: Cargo.toml
shared-crypto/src/: error.rs  keypair.rs  lib.rs  signature.rs  types.rs
tests/: post_quantum_crypto_integration.rs
tests/e2e/: Cargo.toml  aevum_e2e_tests.rs  cli_e2e_tests.rs  system_e2e_tests.rs
wallet-desktop/: Cargo.toml
wallet-desktop/src/: lib.rs
