[workspace]
members = [
    "bond-core",
    "aevum-core",
    "shared-crypto",
    "p2p-network",
    "cli-tools",
    "wallet-desktop",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Oseas Matos Soares <oseas@aevum.bond>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/aevum-bond/aevum-bond"
homepage = "https://aevum.bond"
description = "Aevum & Bond: A Post-Quantum Dual-Ledger Financial Ecosystem"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
sha3 = "0.10"
rand = "0.8"
hex = "0.4"
# Post-Quantum Cryptography - ML-DSA (Dilithium)
pqcrypto-dilithium = "0.5"
ed25519-dalek = "2.0"      # Temporary fallback during development

# Networking
libp2p = { version = "0.53", features = [
    "gossipsub",
    "mdns",
    "noise",
    "yamux",
    "tcp",
    "tokio",
    "kad",
] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
proptest = "1.0"
