[package]
name = "aevum-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Aevum Protocol: Post-Quantum Proof-of-Dedication Transactional Layer"

[dependencies]
shared-crypto = { path = "../shared-crypto" }
serde.workspace = true
