[package]
name = "p2p-network"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "P2P Networking Layer for Aevum & Bond"

[dependencies]
libp2p.workspace = true
tokio.workspace = true
